# trilatEKF

./: .gitignore  CMakeLists.txt  README.md
data/: dataset_3.csv  output_0.csv
src/: helpers.h  kalman.cpp  kalman.h  main.cpp  trilatEKF.cpp  trilatEKF.h
